sumo/tests/od2trips/errors/false_options/false_input/options.od2trips
-n input_net.net.xml -d xxxx/input_od_o.fma -o trips.trips.xml
